# functional

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: codeql.yml
functional/: functional.h
functional/include/: error.h  functional_double.h  functional_float.h  functional_int.h  object.h
functional/include/list/: functional_list_double.h
functional/include/types/: double.h  float.h  int.h  object.h
functional/include/types/list/: list_double.h
functional/src/: error.c  functional_double.c  functional_float.c  functional_int.c  object.c
functional/src/list/: functional_list_double.c  nil.cpp
functional/src/list/helpers/: helper_list_double.c  nil.cpp
functional/test/: asserts.h  tests.c  tests.h
